--- a/index.html
+++ b/index.html
@@ -6,7 +6,36 @@
     <title>Basic html by peeranat</title>
 </head>
 <body>
- <h1>สวัสดี HTML เราชื่อ พีรณัฐ</h1>   
+ <h4>สวัสดี HTML เราชื่อ พีรณัฐ</h1>   
+ <body>
+      </div>
+           </h4> 
+                </center>เมนูเว็บไซต์
+                     <a href="index.html">index</a>
+                     =
+                     <a href="div-alignment.html">div</a>
+                     =
+                     <a href="form.html">from</a> 
+                     =
+                     <a href="iframe.html">iframe</a>
+                     =
+                     <a href="img.html">image</a>
+                     =
+                     <a href="link.html">link</a>
+                     =
+                     <a href="table-alignment.html">table</a>
+                     =
+                     <a href="table-css.html">css</a>
+                     =
+                     <a href="ul.html">ul</a>  
+                     =         
+                    </lrft>  
+
+           </h4>
+        </div> 
+          
+                
+ 
  <h2>เรียนอยู่ที่โรงเรียนธาตุนารายณ์วิทยา</h2>
  <h3>ตำบลธาตุเชิงชุม</h3>
  <h4>อำเภอเมือง</h4>
